--- a/Lesson17/Task1/index.html
+++ b/Lesson17/Task1/index.html
@@ -8,17 +8,15 @@
     <title>Timer</title>
 </head>
 <body>
-    <div id="inputs">
-        <input type="text" value="0"  id="hour"><span>:</span>
-        <input type="text" value="0"  id="min"><span>:</span>
-        <input type="text" value="0"  id="sec">
-    </div>
-    <div id="buttons">
-        <button id="start" onclick="Start()">START</button>
-        <button id="stop" onclick="Stop()">STOP</button>
-        <button id="reset" onclick="Reset()">RESET</button>
-    </div>
-    
+    <form name="clockform">
+        <div id="inputs">
+            <input name="clock" size="12" maxlength="12" value="00:00:00">
+            <input name="starter" type="button" value="Start/Lap" onclick="findTIME()"> 
+            <input id="pause" type="button" value="Pause" onclick="Pause()">
+            <input name="clearer" type="button" value="Reset" onclick="clearALL()">
+        </div>
+        <p id="marker"></p>
+       </form>
     <script src="js/script.js"></script>
 </body>
 </html>
